--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vitest/coverage-v8": "3.1.3",
     "automd": "0.4.0",
     "changelogen": "0.6.1",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "9.26.0",
     "eslint-config-unjs": "0.4.2",
     "jsdom": "26.1.0",
@@ -51,5 +52,10 @@
     "typescript": "5.8.3",
     "unbuild": "3.5.0",
     "vitest": "3.1.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
